t00/fixme10.n.ref.stderr
t00/fixme10.n.o.c:4261:22: error: field ‘x’ has incomplete type
 struct t00$fixme10$b x;
                      ^
command exited with 1: cat /tmp/ncc4WB0LF |parallel
